--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_motoristas.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_motoristas.jrxml
@@ -14,19 +14,15 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[select  codigoempleado, nombreempleado, fechaingresoministerio from empleado where codigopuesto= 5]]>
+		<![CDATA[select  codigoempleado, concat(nombreempleado,' ',apellidoempleado)as Empleado, DATE_FORMAT(fechaingresoministerio, '%d/%m/%Y') AS Desde from empleado where codigopuesto= 5]]>
 	</queryString>
 	<field name="codigoempleado" class="java.lang.Integer">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="nombreempleado" class="java.lang.String">
-		<fieldDescription><![CDATA[]]></fieldDescription>
-	</field>
-	<field name="fechaingresoministerio" class="java.sql.Date">
-		<fieldDescription><![CDATA[]]></fieldDescription>
-	</field>
+	<field name="Empleado" class="java.lang.String"/>
+	<field name="Desde" class="java.lang.String"/>
 	<group name="nombreempleado">
-		<groupExpression><![CDATA[$F{nombreempleado}]]></groupExpression>
+		<groupExpression><![CDATA[]]></groupExpression>
 	</group>
 	<group name="nombrepuesto">
 		<groupExpression><![CDATA[]]></groupExpression>
@@ -168,21 +164,21 @@
 			<staticText>
 				<reportElement x="119" y="0" width="132" height="17" uuid="45933b9f-8ac2-4df1-a559-c0d867795b56"/>
 				<textElement>
-					<font fontName="Times New Roman" size="9"/>
+					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Codigo de Empleado]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="335" y="0" width="122" height="17" uuid="42e93400-ab2e-4d3a-b579-c5c1dba947a6"/>
 				<textElement>
-					<font fontName="Times New Roman" size="9"/>
+					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nombre de Empleado]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="555" y="0" width="180" height="17" uuid="5f6e7b56-d32d-41ee-8c48-3da2659baf94"/>
 				<textElement>
-					<font fontName="Times New Roman" size="9"/>
+					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Fecha de aprobación]]></text>
 			</staticText>
@@ -195,7 +191,7 @@
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="52" splitType="Stretch">
+		<band height="16" splitType="Stretch">
 			<textField>
 				<reportElement x="119" y="0" width="100" height="14" uuid="536d7998-9fb0-42ae-92e5-f92c51b2a4d3"/>
 				<textElement>
@@ -204,18 +200,18 @@
 				<textFieldExpression><![CDATA[$F{codigoempleado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="335" y="0" width="162" height="14" uuid="1a8282f8-9255-4a06-9e33-7690f1ed0c42"/>
+				<reportElement x="361" y="0" width="100" height="14" uuid="4dc8a9e4-aae4-4aa4-b776-02013673e81a"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{nombreempleado}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{Empleado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="561" y="0" width="145" height="14" uuid="d2cd28fb-fd1d-4fcb-8fd6-d975679cc690"/>
+				<reportElement x="573" y="0" width="100" height="14" uuid="58bbfe9d-771d-4262-9192-27b1287ad00a"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{fechaingresoministerio}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{Desde}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
@@ -232,7 +228,7 @@
 				<textFieldExpression><![CDATA["Total de Registros:    " + $V{REPORT_COUNT}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="6" y="14" width="792" height="1" uuid="5771fdb5-4983-4d06-bfec-4bf433dd04fb"/>
+				<reportElement x="6" y="8" width="792" height="1" uuid="5771fdb5-4983-4d06-bfec-4bf433dd04fb"/>
 			</line>
 		</band>
 	</pageFooter>
